styles/main.css
* {
    font-family: sans-serif;
}


.viewport {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    background-color: #607eee;
}


.tabs {
    position: absolute;
    top: 12px;
    width: 150px;
    height: 30px;

    display: grid;
    z-index: 10;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 1fr;
    padding: 5px;

    justify-self: center;

    background-color: #ffffff88;

    border: none;
    border-radius: 12px;

    box-shadow: 0px 3px 12px #00000044;
    backdrop-filter: blur(30px);
}

.tabs button {
    background-color: transparent;

    border: none;
    border-radius: 8px;

    font-weight: bold;

    transition: all 0.15s ease;
}

.tabs button.selected {
    color: white;
    background-color: #607eee;
}


.views {
    width: 100%;
    height: 100%;

    z-index: 0;
}

.views div {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    z-index: 1;

    visibility: hidden;
    opacity: 0;

    transition: all 0.25s ease;
}

.views div.selected {
    z-index: 2;
    visibility: visible;
    opacity: 1;
}

